tests/macro_tests/not_enum.stderr
error: 'Operator' derive macro is only valid for 'enum' types
 --> $DIR/not_enum.rs:4:1
  |
4 | struct Op {
  | ^^^^^^
